--- a/bmt/pinstc.css
+++ b/bmt/pinstc.css
@@ -1,231 +1,229 @@
+/**
+ *  Image Loader - CSS
+ * * * OPTION * * *
+ * Author: phungnc@gmail.com
+ */
 #stc_top_control{
-	text-align: center;
-	background-color: #FEFEFE;
-    background-image: -moz-linear-gradient(center top , #FEFEFE, #FEFEFE);
-    background-repeat: repeat-x;
-    height: 40px;
-    box-shadow: 0 -1px #CFCACA inset;
-}
-.sotaycuoi img{
-	height: 39px;
+  text-align: center;
+  background-color: #FEFEFE;
+  background-image: -moz-linear-gradient(center top , #FEFEFE, #FEFEFE);
+  background-repeat: repeat-x;
+  height: 55px;
+  box-shadow: 0 -1px #CFCACA inset;
+  z-index: 9999999999;
+  position: fixed;
+  top: 0px;
+  width: 100%;    
 }
 
 .stc-fixed{
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 999900;
+  /*position: absolute;*/
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999900;
 }
 #stcoverlay{
-	background-color: #FFFFFF;
-	opacity: 0.9;
-	z-index: 999;
+  background-color: rgba(0,0,0,0.85);
+  opacity: 0.9;
+  z-index: 999;
+  position: fixed;
 }
 
 #stc_img_mng {
    /* overflow-x: hidden;
     overflow-y: auto;
     position: relative;*/
-}	
+    position: absolute;
+    top: 10%;
+    left: 10%;
+} 
 #stc_prd_mng{
-	z-index: 999900;
+  z-index: 999900;
 }
 #stc_prd_mng iframe{
-	width: 562px;
-	border: medium none;
-	height: 600px;
+  width: 562px;
+  border: medium none;
+  height: 600px;
 }
 #stc_prd_mng td{
-	vertical-align: top;
+  vertical-align: top;
 }
 #stc_prd_mng td:last-child{
-	vertical-align: middle;
+  vertical-align: middle;
 }
 .stc-imgctn{
-	display: inline-block;
-	position: relative;
-	overflow: hidden;
-	margin: 2px;
-	float: left !important;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  margin: 2px;
+  float: left !important;
 }
 .stc-imgctn img{
-	width: 100%;
-	border: 0 none;
-    height: auto;
-    max-width: 100%;
-    vertical-align: middle;
+  width: 100%;
+  border: 0 none;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
 }
 .stc-imginf{
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	font-size: 12px;
-	text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-size: 12px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 .stc-imginf span{
-	background-color: #FFFFFF;
-	padding: 2px;
+  background-color: #FFFFFF;
+  padding: 2px;
 }
 .stc-imgtb{
-	position: absolute;
-	top: -1px;
-	right: 0;
-	display: none;
-	background-color: #DD4465;
-	cursor: pointer;
+  position: absolute;
+  top: -1px;
+  right: 0;
+  display: none;
+  background-color: #DD4465;
+  cursor: pointer;
 }
 
-
-[class^="stc-icons"]{
-	background: url("http://sotaycuoi.vn/assets/images/icons/icons.png") no-repeat scroll transparent;
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 5px;
-    cursor: pointer;
-}
 .stc-img-overlay{
-	display: none;
-	background-color: #000000;
-	opacity: 0.5;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 100%;
+  display: none;
+  background-color: #000000;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
 }
 [class^="stc-icon"]{
-	height: 24px;
-	width: 24px;
-	padding: 6px;
-	cursor: pointer;
-	z-index: 999999;
+  height: 24px;
+  width: 24px;
+  padding: 6px;
+  cursor: pointer;
+  z-index: 999999;
 }
 .stc-icon-delete{
-	background: url("http://sotaycuoi.vn/assets/images/icons/delete.png") no-repeat scroll transparent;
+  background: url("http://phungnc.github.io/misc/bmt/assets/images/icons/delete.png") no-repeat scroll transparent;
 }
 .stc-icon-ko-red{
-	background: url("http://sotaycuoi.vn/assets/images/icons/ko_red.png") no-repeat scroll transparent;
+  background: url("http://phungnc.github.io/misc/bmt/assets/images/icons/ko_red.png") no-repeat scroll transparent;
 }
 .stc-icon-ok-green{
-	background: url("http://sotaycuoi.vn/assets/images/icons/ok_green.png") no-repeat scroll transparent;
+  background: url("http://phungnc.github.io/misc/bmt/assets/images/icons/ok_green.png") no-repeat scroll transparent;
 }
 .stc-imgctn .stc-icon-ok-green,.stc-imgctn .stc-icon-ko-red{
-	position: absolute;
-	left: 45%;
-	top: 45%;
-	display: none;
+  position: absolute;
+  left: 45%;
+  top: 45%;
+  display: none;
 }
 .stc-imgctn .stc-icon-delete{
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 16px;
-	height: 16px;
-	display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 16px;
+  height: 16px;
+  display: none;
 }
 .stc-imgctn:hover .stc-icon-ok-green,.stc-imgctn:hover .stc-icon-delete{
-	display: block;
+  display: block;
 }
 .stc-imgctn-choosed .stc-icon-ok-green{
-	display: block;
+  display: block;
 }
 .stc-imgctn-choosed .stc-img-overlay{
-	display: block;
+  display: block;
 }
 .stc-imgctn-choosed:hover .stc-icon-ok-green{
-	display: none;
+  display: none;
 }
 .stc-imgctn-choosed:hover .stc-icon-ko-red{
-	display: block;
+  display: block;
 }
 .stc-imgctn-choosed:hover .stc-icon-delete{
-	display: none;
+  display: none;
 }
 
-#submit_image{
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    background-color: #F5F5F5;
-    background-image: -moz-linear-gradient(center top , #FFFFFF, #EAEAEA);
-    background-repeat: repeat-x;
-    border-color: #CCCCCC #CCCCCC #B3B3B3;
-    border-image: none;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;	
-    border-style: solid;
-    border-width: 1px;
-	-moz-box-shadow:0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-	-webkit-box-shadow:0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: #666666;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    line-height: 18px;
-    margin-bottom: 0;
-    padding: 4px 10px;
-    text-align: center;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    vertical-align: middle;	
-    background-color: #1891E6;
-    background-image: -moz-linear-gradient(#29A7FF, #2596E6);
-	background-image: -webkit-linear-gradient(top, #29A7FF 0,#2596E6 100%);
-    border-color: #057ED0;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1) inset;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    float: right;
-    margin: 4px 20px 0 0;
+#close{
+  padding-top: 0.75em;
+  padding-right: 1.5em;
+  padding-bottom: 0.8125em;
+  padding-left: 1.5em;
+  font-size: 1em; 
+  border-style: solid;
+  border-width: 1px;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: bold;
+  line-height: 1;
+  margin: 0 0 1.25em;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  float: right;
+  margin: 10px 20px 0 0;
 }
-#submit_image:hover{
-    -moz-transition: background-position 0.1s linear 0s;
-	-webkit-transition:	background-position 0.1s linear 0s;
-	-o-transition: background-position 0.1s linear 0s;
-    background-color: #2596E6;
-    background-position: 0 -15px;
-    text-decoration: none;
-	color: #FFFFFF;
+#close:hover{
+  -moz-transition: background-position 0.1s linear 0s;
+  -webkit-transition: background-position 0.1s linear 0s;
+  -o-transition: background-position 0.1s linear 0s;
+  background-color: #2596E6;
+  background-position: 0 -15px;
+  text-decoration: none;
+  color: #FFFFFF;
 }
-.img-polaroid{padding:4px;background-color:#fff;border:1px solid #ccc;border:1px solid rgba(0, 0, 0, 0.2);-webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);-moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);}
+.img-polaroid{
+  padding:4px;
+  background-color:#fff;
+  border:1px solid #ccc;
+  border:1px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.1);
+  margin-right: 50px;
+  margin-bottom: 50px;
+  width: 200px;
+  height: 200px;
+
+}
 
 .stc-modal{
-	position: relative;
-	margin: 0 auto;
-	z-index: 999900;
-	overflow: auto;
-	width: 560px;
-	background-color: #FFFFFF;
-	border: 1px solid #999;
-	/* IE6-7 */
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-	-webkit-background-clip: padding-box;
-	-moz-background-clip: padding-box;
-	background-clip: padding-box;
+  position: relative;
+  margin: 0 auto;
+  z-index: 999900;
+  overflow: auto;
+  width: 560px;
+  background-color: #FFFFFF;
+  border: 1px solid #999;
+  /* IE6-7 */
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding-box;
+  background-clip: padding-box;
 }
 .stc-modal-header {
   padding: 9px 15px;
   border-bottom: 1px solid #eee;
 }
 .stc-modal-header h3{
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 30px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 30px;
     margin: 0;
 }
 .stc-modal-header button{
-	margin-top: 2px;
-	background: none repeat scroll 0 0 transparent;
+  margin-top: 2px;
+  background: none repeat scroll 0 0 transparent;
     border: 0 none;
     cursor: pointer;
     padding: 0;
@@ -239,14 +237,14 @@
     text-shadow: 0 1px 0 #FFFFFF;
 }
 .stc-modal-header button:hover{
-	color: #000000;
-	text-decoration: none;
-	cursor: pointer;
-	opacity: 0.4;
-	filter: alpha(opacity=40);
+  color: #000000;
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.4;
+  filter: alpha(opacity=40);
 }
 .stc-modal-body{
-	padding: 15px;
+  padding: 15px;
 }
 
 
